--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "loopback-sendgrid-connector",
-  "version": "0.0.5",
+  "version": "^0.0.6",
   "description": "Loopback connector for SendGrid",
   "main": "./lib/sendgrid.js",
   "scripts": {
